# lunar-lander

./: .gitignore  BEHAVIORS.md  CLAUDE.md  LESSONS_LEARNED.md  behavior_analysis.py  charts.py  config.py  constants.py  data_types.py  diagnostics.py  environment.py  functions.py  inputs.py  main.py  network.py  plan.txt  print_statement_1_14_2025  pyproject.toml  replay_buffer.py  scratch.py  trainer.py  training_output.txt
.claude/: settings.local.json
.claude/commands/: add-print-diagnostics.md  add-tests.md  homework-formatting.md  lint.md  merge.md  refactor.md  suggest.md
analysis/: batch_aggregator.py  behavior_analysis.py  charts.py  diagnostics.py  episode_storage.py  output_formatter.py  reporter.py  streak_tracker.py
docs/: BEHAVIORS.md  CLAUDE.md  CODEBASE_DOCUMENTATION.md  README.md  data_access_policy.md  plan.txt
experiments/: EXPERIMENT_IDEAS.md  EXPERIMENT_TEMPLATE.md  INDEX.md
experiments/EXP_001_render_mode_comparison/: EXPERIMENT.md  config.json
experiments/EXP_002_single_env_render_comparison/: EXPERIMENT.md  config.json
experiments/EXP_003_render_mode_all_validation/: EXPERIMENT.md  config.json
experiments/EXP_004_batch_size_performance/: EXPERIMENT.md  config.json
experiments/EXP_005_update_frequency/: EXPERIMENT.md  config.json
experiments/EXP_006_network_size_performance/: EXPERIMENT.md  config.json
experiments/EXP_007_buffer_size/: EXPERIMENT.md  config.json
experiments/EXP_008_episode_length_cap/: EXPERIMENT.md  config.json
experiments/EXP_009_learning_rate_sweep/: EXPERIMENT.md  config.json
experiments/EXP_010_tau_sweep/: EXPERIMENT.md  config.json
experiments/EXP_012_reward_shaping_ablation/: EXPERIMENT.md  IMPLEMENTATION_PLAN.md  config.json
experiments/EXP_013_gamma_sweep/: EXPERIMENT.md  config.json
experiments/EXP_017_noise_decay_sweep/: EXPERIMENT.md  config.json
experiments/EXP_021_long_training/: EXPERIMENT.md  config.json
experiments/EXP_022_exploitation_phases/: EXPERIMENT.md
experiments/EXP_023_long_training_with_recording/: EXPERIMENT.md
experiments/EXP_024_long_training_with_recording/: EXPERIMENT.md
logs/: print_statement_1_14_2025  print_statement_1_16_2026_morning
scripts/: aggregate_experiment.py  run_simulation.py
simulations/2026-01-16T17-39-44_f69f81b9/: config.json  runs.jsonl
simulations/2026-01-16T18-15-24_5889d141/: config.json  runs.jsonl
simulations/2026-01-16T18-22-15_825bade4/: config.json  runs.jsonl
simulations/2026-01-16T18-23-01_d010a2d2/: config.json  runs.jsonl
simulations/2026-01-16T18-26-17_33f90599/: config.json  runs.jsonl
simulations/2026-01-16T20-30-32_aebe5017/: config.json  runs.jsonl
simulations/2026-01-17T14-22-18_9b9eb5e6/: config.json  runs.jsonl
src/: __init__.py  config.py  constants.py  data_types.py  label_video_with_episode.py  main.py  models.py  output_mode.py
src/analysis/: __init__.py  batch_aggregator.py  (+6 more)
sweep_configs/: batch_policy_4x4.json  buffer_warmup_grid_4x3.json  env_architecture_comparison.json  example_lr_sweep.json  example_noise_sweep.json  example_random_sweep.json  gamma_sweep_1x4.json  lr_conservative_1500ep.json  lr_conservative_1500ep_v2.json  lr_grid_3x3.json  lr_sweep_1000.json  noise_tau_4x4.json
sweep_results/: EXPERIMENT_LOG.md
tests/: __init__.py  conftest.py  test_behavior_analysis.py  test_config.py  test_data_pipeline.py  test_environment.py  test_replay_buffer.py  test_trainer.py
tools/: __init__.py  compare_env_modes.py  compare_runs.py  log_analyzer.py  profiler.py  run_exp023.py  run_exp024.py  run_long_experiment.py  run_single_training.py  sweep_runner.py  test_video_recording.py
training/: __init__.py  environment.py  inputs.py  network.py  trainer.py
(+1594 files in other folders)
