[project]
name = "lunar-lander-td3"
version = "1.0.0"
description = "TD3 reinforcement learning agent for LunarLander-v3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium[box2d]>=0.29.0",
    "matplotlib>=3.7.0",
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "-ra",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# black configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | chart_images
    | sweep_results
    | profile_results
)/
'''

# =============================================================================
# ruff configuration
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
    "B905",  # zip without explicit strict parameter
    "SIM108", # Use ternary operator instead of if-else
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811"]  # Allow unused imports and redefined fixtures in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__

[tool.ruff.lint.isort]
known-first-party = ["config", "data_types", "constants", "training", "analysis"]

# =============================================================================
# mypy configuration
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = [
    "^\\.venv",
    "^chart_images",
    "^sweep_results",
    "^profile_results",
]

[[tool.mypy.overrides]]
module = [
    "gymnasium.*",
    "pygame.*",
    "matplotlib.*",
]
ignore_missing_imports = true

# =============================================================================
# coverage configuration
# =============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "tools/*",
    "sweep_configs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
